--- a/package.json
+++ b/package.json
@@ -6,5 +6,23 @@
     "mysql": "^2.18.1",
     "socket.io": "^4.5.3",
     "socket.io-client": "^4.5.3"
-  }
+  },
+  "scripts": {
+    "start": "node server.js"
+  },
+  "name": "btl",
+  "version": "1.0.0",
+  "main": "server.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/NhuNgoc1101/BTL.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/NhuNgoc1101/BTL/issues"
+  },
+  "homepage": "https://github.com/NhuNgoc1101/BTL#readme",
+  "description": ""
 }
